--- a/subir.css
+++ b/subir.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../proyecto/img/jesus.jpeg);
+    background-image: url(../img/jesus.jpeg);
     background-size: 100vw 100vh;
     background-attachment: fixed;
     margin: 0;
